[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/LobbyScripts/LobbyScript.gd" type="Script" id=1]
[ext_resource path="res://NetworkingAPI/ServerBroadcaster.gd" type="Script" id=2]
[ext_resource path="res://Fonts/StartMenuMainText.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/StartMenuScreen.tres" type="DynamicFont" id=5]
[ext_resource path="res://Models/MenuModels/BackButtonNode.tscn" type="PackedScene" id=6]
[ext_resource path="res://Fonts/player_namesFont.tres" type="DynamicFont" id=7]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )
advertiserPath = NodePath("../Lobby/ServerBroadcaster")

[node name="ServerBroadcaster" type="Node" parent="."]
script = ExtResource( 2 )

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_left = -1.46329
margin_right = 377.537
margin_bottom = 841.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyName" type="Label" parent="."]
margin_top = 43.0476
margin_right = 377.0
margin_bottom = 86.0476
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="."]

[node name="StartGameButton" type="Button" parent="Buttons"]
margin_top = 495.707
margin_right = 378.0
margin_bottom = 575.707
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "START GAME"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButtonNode" parent="Buttons" instance=ExtResource( 6 )]

[node name="PlayerNames" type="Node2D" parent="."]

[node name="PlayerOneName" type="Label" parent="PlayerNames"]
margin_left = 230.0
margin_top = 291.61
margin_right = 330.0
margin_bottom = 317.61
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerTwoName" type="Label" parent="PlayerNames"]
margin_left = 230.0
margin_top = 351.486
margin_right = 330.0
margin_bottom = 377.486
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1Label" type="Label" parent="PlayerNames"]
margin_left = 35.0
margin_top = 289.625
margin_right = 220.0
margin_bottom = 323.625
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player one:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2Label" type="Label" parent="PlayerNames"]
margin_left = 35.0
margin_top = 348.512
margin_right = 221.0
margin_bottom = 387.512
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Player two:"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/StartGameButton" to="." method="_on_StartGameButton_pressed"]
